--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Pillar - Bootstrap 4 Resume/CV Template for Developers</title>
+    <title>Kento Aoyama - Curriculum Vitae</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -29,22 +29,23 @@
 	    <div class="resume-wrapper-inner mx-auto text-left bg-white shadow-lg">
 		    <header class="resume-header pt-4 pt-md-0">
 			    <div class="media flex-column flex-md-row">
-				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="">
+				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.png" alt="">
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
-						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Steve Doe</h1>
-						    <div class="title mb-3">Full Stack Developer</div>
+						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Kento Aoyama</h1>
+						    <div class="title mb-3">Ph.D. student in Tokyo Tech</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>Steve.Doe@website.com</a></li>
-							    <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>0123 456 78900</a></li>
+								<li class="mb-2"><a href="mailto:aoyama@bi.c.titech.ac.jp"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>aoyama@bi.c.titech.ac.jp</a></li>
+								<li><a href="https://maps.google.com/maps?q=Tokyo,%20Japan"><i class="fas fa-map-marker-alt fa-fw mr-2" data-fa-transform="grow-6"></i>Tokyo, Japan</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/stevedoe</a></li>
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/username</a></li>
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span>codepen.io/username/</a></li>
-				                <li><a href="#"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>yourwebsite.com</a></li>
+				                <li class="mb-3"><a href="https://linkedin.com/in/kento-aoyama"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/kento-aoyama</a></li>
+				                <li class="mb-3"><a href="http://github.com/metaVariable"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/metaVariable</a></li>
+								<li class="mb-3"><a href="https://twitter.com/meta1127"><span class="fa-container text-center mr-2"><i class="fab fa-twitter fa-fw"></i></span>twitter.com/meta1127</a></li>
+								<li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
+				                <!-- <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>private blog</a></li> -->
 						    </ul>
 					    </div><!--//secondary-info-->
 					    
