--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 										    <div class="resume-position-time">2017.9 - 2017.12</div>
 										</div><!--//resume-timeline-item-header-->
 										<div class="resume-timeline-item-desc">
-											<p>Research collaboration with HPC System Integration Group at CSCS. Designing and developing the software architecture of 'Shifter', an open source Linux container for HPC environments. The internal designs were inherited to new container 'Sarus'.</p>
+											<p>Research collaboration with HPC System Integration Group at CSCS. Designing and developing the software architecture of "Shifter", an open source Linux container for HPC environments. The internal designs were inherited to new container "Sarus".</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
-											<p>The research results are used in production of HPC systems at CSCS.</p>
+											<p>The research results are used in the production environment of HPC system in CSCS.</p>
 											<ul class="small">
-												<li>HPC Systems at Swiss National Supercomputing Centre.</li>
+												<li>HPC System at Swiss National Supercomputing Centre.</li>
 												<li>HPC-AI Advisory Council 2018, 2019.</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
@@ -125,6 +125,7 @@
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">C/C++</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Shifter/Sarus</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">CI/CD</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI compatible</span></li>
 											</ul>
 										</div><!--//resume-timeline-item-desc-->
