--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 									</ul>
 								</div><!--//resume-skill-item-->
 						        <div class="resume-skill-item">
-							        <h4 class="resume-skills-cat font-weight-bold">DevOps, Backend</h4>
+							        <h4 class="resume-skills-cat font-weight-bold">DevOps, Backend engineering</h4>
 							        <ul class="list-unstyled mb-4">
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Docker/Swarm</div>
@@ -360,8 +360,9 @@
 							            <li class="list-inline-item"><span class="badge badge-light">R</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">MATLAB</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Machine learning</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Comuputing Simulation</span></li>
-										<li class="list-inline-item"><span class="badge badge-light">Linux system admin</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Computing simulation</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Agile programming</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Linux system administration</span></li>
 						            </ul>
 						        </div><!--//resume-skill-item-->
 						    </div><!--resume-section-content-->
