--- a/index.html
+++ b/index.html
@@ -83,17 +83,19 @@
                         </ul>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                         <ul class="list-inline">
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux containers</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Singularity</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Shifter/Sarus</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI container</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI image</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI registry</span></li>
                           <li class="list-inline-item"><span class="badge badge-primary badge-pill">MPI/OpenMP</span></li>
                           <li class="list-inline-item"><span class="badge badge-primary badge-pill">CUDA</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Performance Profiling</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux containers</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Shifter/Sarus</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Singularity</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">MS Azure</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">MEGADOCK</span></li>
-                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">GHOST</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Cloud Computing</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">Supercomputers</span></li>
                           <li class="list-inline-item"><span class="badge badge-primary badge-pill">Bioinformatics</span></li>
+                          <li class="list-inline-item"><span class="badge badge-primary badge-pill">HPC Engineering</span></li>
                         </ul>
                       </div><!--//resume-timeline-item-desc-->
 
@@ -122,8 +124,8 @@
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">C/C++</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Shifter/Sarus</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">CI/CD</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI compatible</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI image</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">OCI registry</span></li>
                       </ul>
                     </div><!--//resume-timeline-item-desc-->
 
@@ -143,11 +145,11 @@
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                       <ul class="list-inline">
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">C/C++</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Android</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">CI/CD</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agile Programming</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Redmine</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">GitLab</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">DevOps Engineering</span></li>
                       </ul>
                     </div><!--//resume-timeline-item-desc-->
 
@@ -172,12 +174,15 @@
                         </ul>
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                       <ul class="list-inline">
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">The K computer</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">C/C++</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Python</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">MPI/OpenMP</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Genome pipeline</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Job scheduling</span></li>
-                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Dynamic-task-distribution</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Job Scheduling</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">Pipeline Development</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">The K computer</span></li>
                         <li class="list-inline-item"><span class="badge badge-primary badge-pill">Bioinformatics</span></li>
+                        <li class="list-inline-item"><span class="badge badge-primary badge-pill">HPC Engineering</span></li>
                       </ul>
                     </div><!--//resume-timeline-item-desc-->
 
@@ -352,7 +357,6 @@
                         <li class="list-inline-item"><span class="badge badge-light">MATLAB</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Machine learning</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Computing simulation</span></li>
-                        <li class="list-inline-item"><span class="badge badge-light">Agile programming</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Linux system administration</span></li>
                       </ul>
                     </div><!--//resume-skill-item-->
