add SC19 reference

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
                         <p>The research results were presented at academic conferences and tech-reports.</p>
                         <ul class="small">
+                          <li>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19).</li>
                           <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19).</li>
                           <li>High Performance Computing Symposium 2017 (HPCS 2017).</li>
                           <li>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) Annual Meeting 2019.</li>
@@ -219,7 +220,7 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Conference Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 2019. (accepted)
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, NV, USA, July 29, 2019.
                     </li>
                   </ul>
                 </div><!--//peer-reviewed-->
@@ -244,6 +245,9 @@
                 <div class="publication-without-review">
                   <h3 class="resume-position-title font-weight-bold mb-1">Poster Presentation</small></h3>
                   <ul class="list-unstyled resume-degree-org">
+                    <li class="mb-1">
+                        <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application", <I>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19)</I>, Nov. 2019. (accepted)
+                    </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Comparison of the HPC Container Technologies for Bioinformatics Application", <I>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) 1st Workshop</I>, May. 2018.
                     </li>
