--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="resume-position-time">2017.9 - 2017.12</div>
                     </div><!--//resume-timeline-item-header-->
                     <div class="resume-timeline-item-desc">
-                      <p>Research collaboration with HPC System Integration Group at CSCS. Designing and developing the software architecture of "Shifter", an open source Linux container for HPC environments. The internal designs were inherited to new container "Sarus".</p>
+                      <p>Research collaboration with HPC System Integration Group at CSCS. Designing and developing the software architecture of "Shifter-NG" (Next Generation), an open source Linux container for HPC environments. The internal architectural designs were inherited to the new OCI compatible container "Sarus".</p>
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
                       <p>The research results are used in the production environment of HPC system in CSCS.</p>
                       <ul class="small">
@@ -220,7 +220,7 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Conference Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, NV, USA, July 29, 2019.
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, July 29, 2019.
                     </li>
                   </ul>
                 </div><!--//peer-reviewed-->
@@ -246,19 +246,19 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Poster Presentation</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                        <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application", <I>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19)</I>, Nov. 2019. (accepted)
+                        <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application", <I>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19)</I>, Denver, Colorado, US, Nov. 2019. [<A href="https://sc19.supercomputing.org/presentation/?id=rpost200&sess=sess348">Session</A>]
                     </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Comparison of the HPC Container Technologies for Bioinformatics Application", <I>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) 1st Workshop</I>, May. 2018.
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "Large-Scale Parallelization of Cloud Native PPI-System using Container Virtualization", <I>ACLS International Summer School 2017</I>, Sep. 2017.
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "Large-Scale Parallelization of Cloud Native PPI-System using Container Virtualization", <I>ACLS International Summer School 2017</I>, Jurong West, Singapore, Sep. 2017.
                     </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "High-Performance Protein-Protein Interaction Predictions on Distributed Containerized Environment", <I>High Performance Computing Symposium 2017 (HPCS 2017)</I>, Jun. 2017.
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Large-scale Parallelization of Exome Analysis Pipeline on K-computer", <I>ACLS International Summer School 2014</I>, Aug. 2014.
+                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Large-scale Parallelization of Exome Analysis Pipeline on K-computer", <I>ACLS International Summer School 2014</I>, West Lafayette, Indiana, US, Aug. 2014.
                     </li>
                   </ul>
                 </div><!--//poster-->
@@ -298,7 +298,7 @@
                   <h4 class="resume-skills-cat font-weight-bold">HPC engineering</h4>
                   <ul class="list-unstyled">
                     <li class="mb-2">
-                      <div class="resume-skill-name">Linux containers for HPC</div>
+                      <div class="resume-skill-name">Linux Containers for HPC</div>
                       <div class="progress resume-progress">
                         <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
@@ -327,7 +327,7 @@
                       <h4 class="resume-skills-cat font-weight-bold">DevOps, Backend engineering</h4>
                       <ul class="list-unstyled mb-4">
                         <li class="mb-2">
-                          <div class="resume-skill-name">Docker/Swarm</div>
+                          <div class="resume-skill-name">Docker/Linux Containers</div>
                           <div class="progress resume-progress">
                             <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
@@ -344,21 +344,17 @@
                             <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                         </li>
-                        <li class="mb-2">
-                          <div class="resume-skill-name">Python</div>
-                          <div class="progress resume-progress">
-                            <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                        </li>
                       </ul>
                     </div><!--//resume-skill-item-->
                     <div class="resume-skill-item">
                       <h4 class="resume-skills-cat font-weight-bold">Others</h4>
                       <ul class="list-inline">
+                        <li class="list-inline-item"><span class="badge badge-light">Python</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Git</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Java</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">R</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">MATLAB</span></li>
+                        <li class="list-inline-item"><span class="badge badge-light">Algorithms</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Machine learning</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Computing simulation</span></li>
                         <li class="list-inline-item"><span class="badge badge-light">Linux system administration</span></li>
