add JSFI and SCAsia2020

--- a/index.html
+++ b/index.html
@@ -74,13 +74,12 @@
                       <div class="resume-timeline-item-desc">
                         <p>Research & development of Linux containers for High-Performance Computing applications, and implementation of the parallel/distributed system for bioinformatics software on clouds and supercomputers. (e.g. TSUBAME, ABCI, MS Azure)</p>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
-                        <p>The research results were presented at academic conferences and tech-reports.</p>
+                        <p>The research results were presented at academic journals/conferences/tech-reports.</p>
                         <ul class="small">
-                          <li>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19).</li>
+                          <li>Journal of Supercomputing Frontiers and Innovations (JSFI, accepted).</li>
+                          <li>Supercomputing Asia 2020 (SCAsia2020, accepted)</li>
+                          <li>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19, tech program).</li>
                           <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19).</li>
-                          <li>High Performance Computing Symposium 2017 (HPCS 2017).</li>
-                          <li>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) Annual Meeting 2019.</li>
-                          <li>IPSJ SIG Technical Report (SIGBIO49, 54).</li>
                         </ul>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                         <ul class="list-inline">
@@ -211,6 +210,9 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Journal Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
+                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Masahito Ohue, Yutaka Akiyama, "Development of Computational Pipeline Software for Genome/Exome Analysis on the K computer", <I>Jorunal of Supercomputing frontiers and innovations</I>, 2020. (accepted)
+                    </li>
+                    <li class="mb-1">
                       <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Development of Exome Analysis Pipeline on the K Computer", <I>IPSJ Transactions on Advanced Computing System(ACS)</I>, No.9, Vol.2, pp.15-33, 2016. 
                       [<A href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=169433&item_no=1&page_id=13&block_id=8">IPSJ</A>]
                     </li>
@@ -219,6 +221,9 @@
                 <div class="publication-peer-reviewed">
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Conference Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
+                    <li class="mb-1">
+                      <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration Workflow for Large-Scale All-to-All Protein-Protein Docking Calculations", <I>Supercomputing Asia 2020 (SCA'20)</I>, Singapore, Feb. 26, 2020. (accepted)
+                    </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, July 29, 2019.
                     </li>
@@ -263,7 +268,7 @@
                   </ul>
                 </div><!--//poster-->
                 <div class="oral-presentation">
-                  <h3 class="resume-position-title font-weight-bold mb-1">Presentation (without paper)</small></h3>
+                  <h3 class="resume-position-title font-weight-bold mb-1">Oral Presentation</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Container virtualizations for computational science on HPC environments, <I>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) Annual Meeting 2019</I>, Mar. 2019.
