--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
               </div><!--//primary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
+                  <li class="mb-3">　</li>
                   <li class="mb-3"><a href="https://linkedin.com/in/kento-aoyama"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/kento-aoyama</a></li>
                   <li class="mb-3"><a href="http://github.com/metaVariable"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/metaVariable</a></li>
+                </ul>
+              </div><!--//secondary-info-->
+              <div class="secondary-info ml-md-auto mt-2">
+                <ul class="resume-social list-unstyled">
+                  <li class="mb-3">Last updated: Jan. 30, 2020</li>
                   <li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
-            </div><!--//secondary-info-->
+              </div><!--//secondary-info-->
             </div><!--//media-body-->
           </div><!--//media-->
         </header>
