--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               </div><!--//secondary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
-                  <li class="mb-3">Last updated: Jan. 30, 2020</li>
+                  <li class="mb-3">Last updated: Apr. 20, 2020</li>
                   <li class="mb-3"><a href="https://www.slideshare.net/KentoAoyama"><span class="fa-container text-center mr-2"><i class="fab fa-slideshare"></i></span>slideshare.net/KentoAoyama</a></li>
                   <li class="mb-3"><a href="http://metavariable.hatenablog.com/"><span class="fa-container text-center mr-2"><i class="fas fa-blog"></i></span>blog (Japanese)</a></li>
                 </ul>
@@ -82,10 +82,10 @@
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
                         <p>The research results were presented at academic journals/conferences/tech-reports.</p>
                         <ul class="small">
-                          <li>Journal of Supercomputing Frontiers and Innovations (JSFI, accepted).</li>
-                          <li>Supercomputing Asia 2020 (SCAsia2020, accepted)</li>
-                          <li>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19, tech program).</li>
-                          <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19).</li>
+                          <li>Supercomputing Frontiers and Innovations (Vol.7, No.1, 2020)</li>
+                          <li>Supercomputing Asia 2020 (Singapore, Feb. 2020)</li>
+                          <li>Technical Program (Research Poster) in SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis</li>
+                          <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</li>
                         </ul>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                         <ul class="list-inline">
@@ -216,11 +216,12 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Journal Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Masahito Ohue, Yutaka Akiyama, "Development of Computational Pipeline Software for Genome/Exome Analysis on the K computer", <I>Jorunal of Supercomputing frontiers and innovations</I>, 2020. (accepted)
+                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Masahito Ohue, Yutaka Akiyama, "Development of Computational Pipeline Software for Genome/Exome Analysis on the K computer", <I>Supercomputing frontiers and innovations</I>, 7(1), 37-54, 2020.
+                      [doi: <a href="http://doi.org/10.14529/jsfi200102">10.14529/jsfi200102</a>]
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Development of Exome Analysis Pipeline on the K Computer", <I>IPSJ Transactions on Advanced Computing System(ACS)</I>, No.9, Vol.2, pp.15-33, 2016. 
-                      [<A href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=169433&item_no=1&page_id=13&block_id=8">IPSJ</A>]
+                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Masahito Ohue, Yutaka Akiyama, "Development of Exome Analysis Pipeline on the K Computer", <I>IPSJ Transactions on Advanced Computing System(ACS)</I>, 9(2), 15-33, 2016. 
+                      [<A href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=169433&item_no=1&page_id=13&block_id=8">PDF</A>]
                     </li>
                   </ul>
                 </div><!--//peer-reviewed-->
@@ -228,10 +229,10 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Conference Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration Workflow for Large-Scale All-to-All Protein-Protein Docking Calculations", <I>Supercomputing Asia 2020 (SCA'20)</I>, Singapore, Feb. 26, 2020. (accepted)
+                      <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration Workflow for Large-Scale All-to-All Protein-Protein Docking Calculations", <I>Supercomputing Asia 2020 (SCA'20)</I>, Singapore, Feb. 26, 2020. (in press)
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, July 29, 2019.
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, Jul. 29, 2019.
                     </li>
                   </ul>
                 </div><!--//peer-reviewed-->
@@ -239,14 +240,14 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Conference Paper (without peer-review)</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Survey and Performance Comparison of Container Technologies in Bioinformatics Field, <I>IPSJ SIG Technical Report</I>, 2017-BIO-54(47), pp.1–7. 2018. 
+                      <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Survey and Performance Comparison of Container Technologies in Bioinformatics Field, <I>IPSJ SIG Technical Report</I>, 2017-BIO-54(47), pp.1-7. 2018. 
                       </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "Evaluation of Container Virtualized MEGADOCK System in Distributed Computing Environment", <I>IPSJ SIG Technical Report</I>, 2017-BIO-49(3), pp.1–8. 2017. 
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Masahito Ohue, Yutaka Akiyama, "Evaluation of Container Virtualized MEGADOCK System in Distributed Computing Environment", <I>IPSJ SIG Technical Report</I>, 2017-BIO-49(3), pp.1-8. 2017. 
                       [<A href="https://www.slideshare.net/KentoAoyama/evaluation-of-container-virtualized-megadock-systemin-distributed-computing-environment">Slide</A>]
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Large-scale Parallelization of Exome Analysis Pipeline on K-computer", <I>IPSJ SIG Technical Report</I>, 2014-BIO-38(33), pp.1–7. 2014.
+                      <b>Kento Aoyama</b>, Masanori Kakuta, Yuri Matsuzaki, Takashi Ishida, Yutaka Akiyama, "Large-scale Parallelization of Exome Analysis Pipeline on K-computer", <I>IPSJ SIG Technical Report</I>, 2014-BIO-38(33), pp.1-7. 2014.
                     </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Kyouhei Akai, Junichi Akita, Akira Tsukada, "Improvements of the GPU accelerated Simulation for Mach Bands Generation Mechanism in Human Visual System Model", <I>IEEJ Hokuriku Branch</I>, B-5, 2010. 
@@ -257,7 +258,7 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Poster Presentation</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                        <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application", <I>The International Conference for High Performance Computing, Networking, Storage, and Analysis (SC19)</I>, Denver, Colorado, US, Nov. 2019. [<A href="https://sc19.supercomputing.org/presentation/?id=rpost200&sess=sess348">Session</A>]
+                        <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration for Bioinformatics Application", Technical Program (Research Poster) in <I>SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis</I>, Denver, Colorado, US, Nov. 2019. [<A href="https://sc19.supercomputing.org/presentation/?id=rpost200&sess=sess348">Session</A>]
                     </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Masahito Ohue, Yutaka Akiyama, "Comparison of the HPC Container Technologies for Bioinformatics Application", <I>Real World Big-Data Computation Open Innovation Laboratory (RWBC-OIL) 1st Workshop</I>, May. 2018.
