--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <ul class="small">
                           <li>Supercomputing Frontiers and Innovations (Vol.7, No.1, 2020)</li>
                           <li>Supercomputing Asia 2020 (Singapore, Feb. 2020)</li>
-                          <li>Technical Program (Research Poster) in SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis</li>
+                          <li>Technical Program (Research Poster) in SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis</li> (Denver, CO, US, Nov. 2019)
                           <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</li>
                         </ul>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
