--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
                         <p>The research results were presented at academic journals/conferences/tech-reports.</p>
                         <ul class="small">
-                          <li>Supercomputing Frontiers and Innovations (Vol.7, No.1, 2020)</li>
+                          <li>Supercomputing Frontiers and Innovations (2020)</li>
                           <li>Supercomputing Asia 2020 (Singapore, Feb. 2020)</li>
-                          <li>Technical Program (Research Poster) in SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis</li> (Denver, CO, US, Nov. 2019)
-                          <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</li>
+                          <li>Technical Program in SC19: The International Conference for High Performance Computing, Networking, Storage, and Analysis (Denver, CO, US, Nov. 2019)</li>
+                          <li>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (Las Vegas, NV, US, Jul. 2019)</li>
                         </ul>
                         <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technology keywords:</h4>
                         <ul class="list-inline">
