--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
                   <h3 class="resume-position-title font-weight-bold mb-1">Peer-reviewed Conference Paper</small></h3>
                   <ul class="list-unstyled resume-degree-org">
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration Workflow for Large-Scale All-to-All Protein-Protein Docking Calculations", <I>Supercomputing Asia 2020 (SCA'20)</I>, Singapore, Feb. 26, 2020. (in press)
+                      <b>Kento Aoyama</b>, Hiroki Watanabe, Masahito Ohue, Yutaka Akiyama, "Multiple HPC Environments-Aware Container Image Configuration Workflow for Large-Scale All-to-All Protein-Protein Docking Calculations", <I>Supercomputing Asia 2020 (SCA'20)</I>, Singapore, Feb. 26, 2020.
+                        [doi: <a href="https://doi.org/10.1007/978-3-030-48842-0_2">10.1007/978-3-030-48842-0_2</a>]
                     </li>
                     <li class="mb-1">
                       <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, Jul. 29, 2019.
