--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         [doi: <a href="https://doi.org/10.1007/978-3-030-48842-0_2">10.1007/978-3-030-48842-0_2</a>]
                     </li>
                     <li class="mb-1">
-                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein–protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, 175-181, Las Vegas, Nevada, US, Jul. 29, 2019.
+                      <b>Kento Aoyama</b>, Yuki Yamamoto, Ohue Masahito, Yutaka Akiyama, "Performance evaluation of MEGADOCK protein-protein interaction prediction system implemented with distributed containers on a cloud computing environment", <I>The 25th International Conference on Parallel and Distributed Processing Techniques and Application (PDPTA'19)</I>, Las Vegas, Nevada, US, Jul. 29, 2019.
                     </li>
                   </ul>
                 </div><!--//peer-reviewed-->
